--- a/BlazorApp2/BlazorApp2.csproj
+++ b/BlazorApp2/BlazorApp2.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Blazored.LocalStorage" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.0.96" />
   </ItemGroup>
 
 </Project>
